<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/content_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.aar92_22.calculadoracientifica.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/black">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


    <LinearLayout
        android:id="@+id/number_display_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/history_access"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="18dp"
            android:text="@string/history"
            android:textColor="@color/whiteLetters"
            android:onClick="historyFragmentOnClick"/>


        <TextView
            android:id="@+id/numberDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:fontFamily="sans-serif"
            android:maxLength="11"
            android:textAlignment="textEnd"
            android:background="@color/black"
            android:textColor="@android:color/background_light"
            android:textSize="55sp" />

    </LinearLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

            <TextView
                android:id="@+id/borrar"
                style="@style/signStylePort"
                android:onClick="onClickBtnAC"
                android:text="@string/clear_all"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/n7"
                app:layout_constraintEnd_toStartOf="@id/inverso"/>

            <TextView
                android:id="@+id/n7"
                style="@style/numberStylePort"
                android:onClick="onClickBtn7"
                android:text="@string/numberSeven"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/borrar"
                app:layout_constraintBottom_toTopOf="@id/n4"
                app:layout_constraintEnd_toStartOf="@id/n8"/>

            <TextView
                android:id="@+id/n4"
                style="@style/numberStylePort"
                android:onClick="onClickBtn4"
                android:text="@string/numberFour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/n7"
                app:layout_constraintBottom_toTopOf="@id/n1"
                app:layout_constraintEnd_toStartOf="@id/n5"/>

            <TextView
                android:id="@+id/n1"
                style="@style/numberStylePort"
                android:onClick="onClickBtn1"
                android:text="@string/numberOne"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/n4"
                app:layout_constraintBottom_toTopOf="@id/n0"
                app:layout_constraintEnd_toStartOf="@id/n2"/>

            <TextView
                android:id="@+id/n0"
                style="@style/numberStylePort"
                android:onClick="onClickBtn0"
                android:text="@string/numberZero"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/n1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dot"/>


            <TextView
                android:id="@+id/inverso"
                style="@style/signStylePort"
                android:onClick="onClickBtnInvert"
                android:text="@string/plus_minus"
                app:layout_constraintStart_toEndOf="@id/borrar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/n8"
                app:layout_constraintEnd_toStartOf="@id/raiz"/>

            <TextView
                android:id="@+id/n8"
                style="@style/numberStylePort"
                android:onClick="onClickBtn8"
                android:text="@string/numberEight"
                app:layout_constraintStart_toEndOf="@id/n7"
                app:layout_constraintTop_toBottomOf="@id/inverso"
                app:layout_constraintBottom_toTopOf="@id/n5"
                app:layout_constraintEnd_toStartOf="@id/n9"/>

            <TextView
                android:id="@+id/n5"
                style="@style/numberStylePort"
                android:onClick="onClickBtn5"
                android:text="@string/numberFive"
                app:layout_constraintStart_toEndOf="@id/n4"
                app:layout_constraintTop_toBottomOf="@id/n8"
                app:layout_constraintBottom_toTopOf="@id/n2"
                app:layout_constraintEnd_toStartOf="@id/n6"/>

            <TextView
                android:id="@+id/n2"
                style="@style/numberStylePort"
                android:onClick="onClickBtn2"
                android:text="@string/numberTwo"
                app:layout_constraintStart_toEndOf="@id/n1"
                app:layout_constraintTop_toBottomOf="@id/n5"
                app:layout_constraintBottom_toTopOf="@id/dot"
                app:layout_constraintEnd_toStartOf="@id/n3"/>

            <TextView
                android:id="@+id/dot"
                style="@style/signStylePort"
                android:onClick="onClickBtnDot"
                android:text="@string/punto"
                app:layout_constraintStart_toEndOf="@id/n0"
                app:layout_constraintTop_toBottomOf="@id/n2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/porciento"/>


            <TextView
                android:id="@+id/raiz"
                style="@style/signStylePort"
                android:onClick="rootOnClick"
                android:text="@string/raiz"
                app:layout_constraintStart_toEndOf="@id/inverso"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/n9"
                app:layout_constraintEnd_toStartOf="@id/entre"/>

            <TextView
                android:id="@+id/n9"
                style="@style/numberStylePort"
                android:onClick="onClickBtn9"
                android:text="@string/numberNine"
                app:layout_constraintStart_toEndOf="@id/n8"
                app:layout_constraintTop_toBottomOf="@id/raiz"
                app:layout_constraintBottom_toTopOf="@id/n6"
                app:layout_constraintEnd_toStartOf="@id/por"/>

            <TextView
                android:id="@+id/n6"
                style="@style/numberStylePort"
                android:onClick="onClickBtn6"
                android:text="@string/numberSix"
                app:layout_constraintStart_toEndOf="@id/n5"
                app:layout_constraintTop_toBottomOf="@id/n9"
                app:layout_constraintBottom_toTopOf="@id/n3"
                app:layout_constraintEnd_toStartOf="@id/menos"/>

            <TextView
                android:id="@+id/n3"
                style="@style/numberStylePort"
                android:onClick="onClickBtn3"
                android:text="@string/numberThree"
                app:layout_constraintStart_toEndOf="@id/n2"
                app:layout_constraintTop_toBottomOf="@id/n6"
                app:layout_constraintBottom_toTopOf="@id/porciento"
                app:layout_constraintEnd_toStartOf="@id/mas"/>

            <TextView
                android:id="@+id/porciento"
                style="@style/signStylePort"
                android:onClick="onClickBtnPercentage"
                android:text="@string/porciento"
                app:layout_constraintStart_toEndOf="@id/dot"
                app:layout_constraintTop_toBottomOf="@id/n3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/igual"/>


            <TextView
                android:id="@+id/entre"
                style="@style/signStylePort"
                android:onClick="divOnClick"
                android:text="@string/division"
                app:layout_constraintStart_toEndOf="@id/raiz"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/por"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/por"
                style="@style/signStylePort"
                android:onClick="mulOnClick"
                android:text="@string/multiply"
                app:layout_constraintStart_toEndOf="@id/n9"
                app:layout_constraintTop_toBottomOf="@id/entre"
                app:layout_constraintBottom_toTopOf="@id/menos"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/menos"
                style="@style/signStylePort"
                android:onClick="subOnClick"
                android:text="@string/minus"
                app:layout_constraintStart_toEndOf="@id/n6"
                app:layout_constraintTop_toBottomOf="@id/por"
                app:layout_constraintBottom_toTopOf="@id/mas"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/mas"
                style="@style/signStylePort"
                android:onClick="addOnClick"
                android:text="@string/plus"
                app:layout_constraintStart_toEndOf="@id/n3"
                app:layout_constraintTop_toBottomOf="@id/menos"
                app:layout_constraintBottom_toTopOf="@id/igual"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/igual"
                style="@style/signStylePort"
                android:onClick="onClickBtnCompute"
                android:text="@string/igual"
                app:layout_constraintStart_toEndOf="@id/porciento"
                app:layout_constraintTop_toBottomOf="@id/mas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>



